welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: not found: value lookingFor
	if(lookingFor(value)){
           ^