welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	if(lookingFor(value)){
		return 888
	}else{
		return 77
	}
}
